# vermax

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 25ac459d28e4_remove_cascade.py  2d0d95be2111_create_transaction_model.py  55b20aea475d_create_tables.py  55d1e2abe044_fix_typing_mapper.py  5d7b7043be93_create_tables.py  702b001b72d7_add_on_delete_cascade_in_account_model_.py
src/adapters/controllers/: home_broker_controller.py
src/adapters/data_types/response/: error_response.py
src/adapters/ports/: i_home_broker_controller.py
src/adapters/ports/controllers/: i_home_broker_controller.py
src/adapters/presenters/accounts/: get_balance_presenter.py  transfer_cash_presenter.py
src/adapters/presenters/auth/: get_token_presenter.py  jwt_presenter.py
src/adapters/presenters/users/: delete_user_presenter.py  get_users_presenter.py  new_user_presenter.py  update_user_presenter.py  user_presenter.py
src/adapters/repositories/accounts/: accounts_repository.py
src/adapters/repositories/users/: user_repository.py
src/application/data_types/dtos/: account_dto.py  jwt_dto.py  transaction_dto.py  user_dto.py
src/application/data_types/enums/: token_enum.py
src/application/data_types/requests/accounts/: transfer_request.py
src/application/data_types/requests/auth/: jwt_request.py
src/application/data_types/requests/users/: user_request.py
src/application/data_types/requests/validators/: cpf_validator.py
src/application/data_types/responses/accounts/: accounts_response.py
src/application/data_types/responses/api/: base_response.py
src/application/data_types/responses/auth/: token_response.py
src/application/data_types/responses/users/: user_response.py
src/application/ports/presenters/auth/: i_jwt_presenter.py  (+1 more)
src/application/services/token/: jwt_token_service.py
src/application/use_cases/accounts/: get_balance_use_case.py  transfer_cash_use_case.py
src/application/use_cases/auth/: get_token_use_case.py
src/application/use_cases/users/: delete_user_use_case.py  get_user_use_case.py  new_user_use_case.py  paginated_users_use_case.py  update_user_use_case.py
src/domain/entities/: transaction_entity.py  user_entity.py
src/domain/exceptions/adapters/: exception.py
src/domain/exceptions/application/: exception.py
src/domain/exceptions/base/: exception.py
src/domain/exceptions/domain/: exception.py
src/domain/models/accounts/: account_model.py
src/domain/models/orm/: base_model.py
src/domain/models/transactions/: transaction_model.py
src/domain/models/users/: user_model.py
tests/: conftest.py
(+20 files in other folders)
